use icons for search score and external links

--- a/cmd/frontend/templates/achievements.gohtml
+++ b/cmd/frontend/templates/achievements.gohtml
@@ -40,7 +40,7 @@
                         <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Completed</th>
-                            <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Search Score">#</th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
