--- a/cmd/frontend/templates/apps.gohtml
+++ b/cmd/frontend/templates/apps.gohtml
@@ -155,8 +155,8 @@
                             <th scope="col" nowrap="nowrap">Followers</th>
                             <th scope="col" nowrap="nowrap">Score</th>
                             <th scope="col" nowrap="nowrap">Price</th>
-                            <th scope="col"></th> {{/* External Link */}}
-                            <th scope="col">Score</th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
