--- a/cmd/frontend/templates/coop.gohtml
+++ b/cmd/frontend/templates/coop.gohtml
@@ -61,8 +61,8 @@
                             <th scope="col" nowrap="nowrap">Games</th>
                             <th scope="col" nowrap="nowrap">Level</th>
                             <th scope="col" nowrap="nowrap">Action</th>
-                            <th scope="col" nowrap="nowrap" class="thin">#</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
@@ -80,7 +80,7 @@
                             <th scope="col" data-disabled>Platforms</th>
                             <th scope="col">Achievements</th>
                             <th scope="col" data-disabled>Co-op Tags</th>
-                            <th scope="col" data-disabled>#</th>
+                            <th scope="col" class="thin" data-disabled><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
