--- a/cmd/frontend/templates/dlc.gohtml
+++ b/cmd/frontend/templates/dlc.gohtml
@@ -31,9 +31,9 @@
                         <thead class="thead-light">
                         <tr>
                             <th scope="col" nowrap="nowrap">Game</th>
-                            <th scope="col" nowrap="nowrap">DLC</th>
-                            <th scope="col" nowrap="nowrap">Owned</th>
-                            <th scope="col" nowrap="nowrap" class="thin"></th>
+                            <th scope="col">DLC</th>
+                            <th scope="col">Owned</th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
