--- a/cmd/frontend/templates/sales.gohtml
+++ b/cmd/frontend/templates/sales.gohtml
@@ -154,7 +154,7 @@
                             <th scope="col">Rating</th>
                             <th scope="col">Ends</th>
                             <th scope="col">Released</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
