--- a/cmd/frontend/templates/stat.gohtml
+++ b/cmd/frontend/templates/stat.gohtml
@@ -38,7 +38,7 @@
                             <th>Price</th>
                             <th>Discount</th>
                             <th>Score</th>
-                            <th class="thin"></th>
+                            <th class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
