--- a/cmd/frontend/templates/badge.gohtml
+++ b/cmd/frontend/templates/badge.gohtml
@@ -71,7 +71,7 @@
                             <th scope="col">Player</th>
                             <th scope="col">Level</th>
                             <th scope="col" class="thin">Achieved</th>
-                            <th scope="col" class="thin"></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
