--- a/cmd/frontend/templates/players.gohtml
+++ b/cmd/frontend/templates/players.gohtml
@@ -86,8 +86,8 @@
                             <th scope="col">Received Count</th>
                             <th scope="col">Received Points</th>
                             {{/* Below two must be last */}}
-                            <th scope="col"><i class="fas fa-link"></i></th>
-                            <th scope="col">Score</th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
