--- a/cmd/frontend/templates/upcoming.gohtml
+++ b/cmd/frontend/templates/upcoming.gohtml
@@ -42,7 +42,7 @@
                             <th scope="col">Game</th>
                             <th scope="col">Followers</th>
                             <th scope="col">Date</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
                         <tbody>
