Finish new bundles

--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -91,7 +91,8 @@
                             <th scope="col">Apps</th>
                             <th scope="col">Packages</th>
                             <th scope="col">Updated At</th>
-                            <th scope="col"></th>
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
