--- a/cmd/frontend/templates/player.gohtml
+++ b/cmd/frontend/templates/player.gohtml
@@ -64,9 +64,9 @@
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#achievements" role="tab">Achievements ({{ comma .Player.AchievementCount }})</a>
                     </li>
-                    {{/*                    <li class="nav-item">*/}}
-                    {{/*                        <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>*/}}
-                    {{/*                    </li>*/}}
+                    <li class="nav-item">
+                        <a class="nav-link" data-toggle="tab" href="#friends" role="tab">Friends ({{ comma .Player.FriendsCount }})</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="tab" href="#badges" role="tab">Badges ({{ comma .Player.BadgesCount }})</a>
                     </li>
