Fix groups icons

--- a/cmd/frontend/templates/groups.gohtml
+++ b/cmd/frontend/templates/groups.gohtml
@@ -60,8 +60,8 @@
                             <th scope="col">Primaries</th>
                             <th scope="col">Members</th>
                             <th scope="col">Trend</th>
-                            <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Search Score">#</th>
-                            <th scope="col" class="thin"></th> {{/* Link */}}
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
