--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -3,103 +3,109 @@
 
     <div class="container" id="chat-bot-page">
 
-        <div class="jumbotron">
-            <a href="{{ .Link }}" target="_blank" rel="noopener">
-                <img src="/assets/img/discord.png" class="float-right" alt="Add Steam Discord Bot to your server" title="Add Steam Discord Bot to your server">
-            </a>
-            <h1><i class="fas fa-robot"></i> Steam Discord Bot</h1>
-            <p class="lead">Add the Steam Discord Bot to <a href="{{ .Link }}" target="_blank" rel="noopener">your server</a> / Test the commands out on <a href="/discord-server">our server</a>.</p>
-            <small>Used on {{ .Guilds }}+ servers so far.</small>
+        <div class="jumbotron clearfix">
+            <h1 class="nowrap float-left mb-0"><i class="fas fa-robot"></i> Steam Discord Bot</h1>
+            <a href="{{ .Link }}" target="_blank" rel="noopener" class="btn btn-success float-right d-block btn-md-inline">Add bot to your server</a>
         </div>
 
         {{ template "flashes" . }}
 
-        <div class="card mb-4">
+        <div class="card">
+            <div class="card-header">
+
+                <ul class="nav nav-tabs card-header-tabs" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" data-toggle="tab" href="#commands" role="tab">Commands</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {{ if not .IsAdmin }}d-none{{ end }}" data-toggle="tab" href="#stats" role="tab">Stats</a>
+                    </li>
+                </ul>
+
+            </div>
             <div class="card-body">
 
-                <div class="jumbotron inline mb-3">
-                    <h4><i class="fas fa-info"></i></h4>
-                    <div>For slash command integration, you will need to add the bot to your server again, using the link above.</div>
-                </div>
+                <div class="tab-content">
+                    <div class="tab-pane show active" id="commands" role="tabpanel">
 
-                <h5>Commands</h5>
-
-                <div class="table-responsive commands-table mb-4">
-                    <table class="table table-hover table-striped" id="commands-docs">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col">Category</th>
-                            <th scope="col" style="width: 25%;">Slash Command</th>
-                            <th scope="col" style="width: 25%;">Legacy Command</th>
-                            <th scope="col">Description</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {{ range .Commands }}
-                            <tr>
-                                <td class="nowrap" data-sort="{{ .Type.Order }}">{{ .Type }}</td>
-                                <td class="nowrap">
-                                    /{{ .ID }}
-                                    {{ range .Slash }}
-                                        <span class="badge rounded-pill bg-light text-dark" data-toggle="tooltip" data-placement="top" title="{{ .Description }}">
+                        <div class="table-responsive commands-table mb-4">
+                            <table class="table table-hover table-striped" id="commands-docs">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Category</th>
+                                    <th scope="col" style="width: 25%;">Slash Command</th>
+                                    <th scope="col" style="width: 25%;">Legacy Command</th>
+                                    <th scope="col">Description</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {{ range .Commands }}
+                                    <tr>
+                                        <td class="nowrap" data-sort="{{ .Type.Order }}">{{ .Type }}</td>
+                                        <td class="nowrap">
+                                            /{{ .ID }}
+                                            {{ range .Slash }}
+                                                <span class="badge rounded-pill bg-light text-dark" data-toggle="tooltip" data-placement="top" title="{{ .Description }}">
                                             {{ .Name }}
-                                            {{ if not .Required }}?{{ end }}
+                                                    {{ if not .Required }}?{{ end }}
                                         </span>
-                                    {{ end }}
-                                </td>
-                                <td class="nowrap">
-                                    {{ $interaction := $.RenderLegacy .Example }}
-                                    {{ $interaction.ID }}
-                                    {{ range $interaction.Options }}
-                                        <span class="badge rounded-pill bg-light text-dark" data-toggle="tooltip" data-placement="top" title="{{ .Description }}">
+                                            {{ end }}
+                                        </td>
+                                        <td class="nowrap">
+                                            {{ $interaction := $.RenderLegacy .Example }}
+                                            {{ $interaction.ID }}
+                                            {{ range $interaction.Options }}
+                                                <span class="badge rounded-pill bg-light text-dark" data-toggle="tooltip" data-placement="top" title="{{ .Description }}">
                                             {{ .Name }}
-                                            {{ if not .Required }}?{{ end }}
+                                                    {{ if not .Required }}?{{ end }}
                                         </span>
-                                    {{ end }}
-                                </td>
-                                <td class="nowrap">{{ .Description }}</td>
-                            </tr>
-                        {{ end }}
-                        </tbody>
-                    </table>
-                </div>
+                                            {{ end }}
+                                        </td>
+                                        <td class="nowrap">{{ .Description }}</td>
+                                    </tr>
+                                {{ end }}
+                                </tbody>
+                            </table>
+                        </div>
 
-                <div id="regions">
-                    <h5>Currency Regions</h5>
-                    {{ range .Regions }}
+                        <div id="regions">
+                            <h5>Currency Regions</h5>
+                            {{ range .Regions }}
 
-                        <span class="badge bg-success">{{ .Name }} <code>{{ .ProductCode }}</code></span>
+                                <span class="badge bg-success">{{ .Name }} <code>{{ .ProductCode }}</code></span>
 
-                    {{ end }}
+                            {{ end }}
+                        </div>
+
+                    </div>
+                    <div class="tab-pane" id="stats" role="tabpanel">
+
+                        <div class="card mb-4">
+                            <div class="card-header">Requests</div>
+                            <div class="card-body">
+                                <div id="chart"></div>
+                            </div>
+                        </div>
+
+                        <div class="table-responsive">
+                            <table class="table table-hover table-striped" data-row-type="commands" data-path="/discord-bot/recent.json" id="recent-table">
+                                <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Author</th>
+                                    <th scope="col">Command</th>
+                                    <th scope="col">Time</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
         </div>
-
-        {{ if .IsAdmin }}
-            <div class="card" id="recent-card">
-                <h5 class="card-header">Recent Requests</h5>
-                <div class="card-body">
-
-                    <div id="chart"></div>
-
-                    <div class="table-responsive">
-                        <table class="table table-hover table-striped" data-row-type="commands" data-path="/discord-bot/recent.json" id="recent-table">
-                            <thead class="thead-light">
-                            <tr>
-                                <th scope="col">Author</th>
-                                <th scope="col">Command</th>
-                                <th scope="col">Time</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-            </div>
-        {{ end }}
 
     </div>
 
