--- a/cmd/frontend/templates/apps_compare.gohtml
+++ b/cmd/frontend/templates/apps_compare.gohtml
@@ -43,8 +43,8 @@
                                 <th scope="col" nowrap="nowrap">Game</th>
                                 <th scope="col" nowrap="nowrap">Price</th>
                                 <th scope="col" nowrap="nowrap">Action</th>
-                                <th scope="col" nowrap="nowrap" class="thin">#</th>
-                                <th scope="col"></th>
+                                <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                                <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                             </tr>
                             </thead>
                             <tbody>
