--- a/cmd/frontend/templates/news.gohtml
+++ b/cmd/frontend/templates/news.gohtml
@@ -49,7 +49,7 @@
                         <tr>
                             <th scope="col">Article</th>
                             <th scope="col" class="thin">Date</th>
-                            <th scope="col" class="thin">Score</th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
