--- a/cmd/frontend/templates/stat.gohtml
+++ b/cmd/frontend/templates/stat.gohtml
@@ -37,7 +37,7 @@
                             <th>Players</th>
                             <th>Price</th>
                             <th>Discount</th>
-                            <th>Score</th>
+                            <th>Review Score</th>
                             <th class="thin"><i class="fab fa-steam"></i></th>
                         </tr>
                         </thead>
