--- a/cmd/frontend/templates/apps_release_dates.gohtml
+++ b/cmd/frontend/templates/apps_release_dates.gohtml
@@ -23,8 +23,8 @@
                             <th scope="col">Game</th>
                             <th scope="col">Release Date</th>
                             <th scope="col">Followers</th>
-                            <th scope="col"></th>
-                            <th scope="col">Score</th> {{/* Search Score */}}
+                            <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
+                            <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
                         </thead>
                         <tbody>
