--- a/cmd/frontend/templates/wishlists.gohtml
+++ b/cmd/frontend/templates/wishlists.gohtml
@@ -66,7 +66,7 @@
                                     <th scope="col">Followers</th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Release Date</th>
-                                    <th scope="col"></th>
+                                    <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                                 </tr>
                                 </thead>
                                 <tbody>
