--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -36,8 +36,8 @@
                             <th scope="row" nowrap="nowrap" class="thin">Discount</th>
 
                             <td>Current: <strong>{{ .Bundle.Discount }}%</strong><br>
-                                Highest: <strong>{{ .Bundle.HighestDiscount }}%</strong><br>
-                                Lowest: <strong>{{ .Bundle.LowestDiscount }}%</strong></td>
+                                Highest: <strong>{{ .Bundle.DiscountHighest }}%</strong><br>
+                                Lowest: <strong>{{ .Bundle.DiscountLowest }}%</strong></td>
 
                         </tr>
                         <tr>
