Fix bundle chart

--- a/cmd/frontend/templates/bundle.gohtml
+++ b/cmd/frontend/templates/bundle.gohtml
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="card mb-3">
-                    <h5 class="card-header">Prices</h5>
+                    <h5 class="card-header">Discount History</h5>
                     <div class="card-body">
                         <div id="prices-chart"></div>
                     </div>
