--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -88,8 +88,8 @@
                             <th scope="col">Name</th>
                             <th scope="col">Discount</th>
                             <th scope="col">Price</th>
-                            <th scope="col">Apps</th>
-                            <th scope="col">Packages</th>
+                            <th scope="col">Items</th>
+                            <th scope="col">Giftable</th>
                             <th scope="col">Updated At</th>
                             <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                             <th scope="col" class="thin"><i class="fas fa-search"></i></th>
