--- a/cmd/frontend/assets/sass/index.scss
+++ b/cmd/frontend/assets/sass/index.scss
@@ -15,6 +15,7 @@
 @import "avatars";
 @import "badge";
 @import "bundle";
+@import "bundles";
 @import "chat";
 @import "chat_bot";
 @import "coop";
