--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -32,25 +32,6 @@
                 <div class="row">
 
                     <div class="col-sm-6 col-md-4">
-                        <div class="form-group slider">
-                            <label for="discount">Discount</label>
-                            <div id="discount" data-name="discount"></div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="form-group slider">
-                            <label for="apps">Apps</label>
-                            <div id="apps" data-name="apps"></div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <div class="form-group slider">
-                            <label for="packages">Packages</label>
-                            <div id="packages" data-name="packages"></div>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-md-4">
                         <div class="form-group">
                             <label for="type">Type</label>
                             <select data-placeholder="Type" class="form-control form-control-chosen" id="type" name="type">
@@ -79,6 +60,25 @@
                         </div>
                     </div>
 
+                    <div class="col-sm-6 col-md-4">
+                        <div class="form-group slider">
+                            <label for="discount">Discount</label>
+                            <div id="discount" data-name="discount"></div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-4">
+                        <div class="form-group slider">
+                            <label for="apps">Items</label>
+                            <div id="apps" data-name="apps"></div>
+                        </div>
+                    </div>
+                    {{/*                    <div class="col-sm-6 col-md-4">*/}}
+                    {{/*                        <div class="form-group slider">*/}}
+                    {{/*                            <label for="packages">Packages</label>*/}}
+                    {{/*                            <div id="packages" data-name="packages"></div>*/}}
+                    {{/*                        </div>*/}}
+                    {{/*                    </div>*/}}
+
                 </div>
 
                 <div class="table-responsive">
@@ -89,7 +89,8 @@
                             <th scope="col">Discount</th>
                             <th scope="col">Price</th>
                             <th scope="col">Items</th>
-                            <th scope="col">Giftable</th>
+                            <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Giftable"><i class="fas fa-gift"></i></th>
+                            <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Complete The Set"><i class="fas fa-tasks"></i></th>
                             <th scope="col">Updated At</th>
                             <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                             <th scope="col" class="thin"><i class="fas fa-search"></i></th>
