Order by created_at

--- a/cmd/frontend/templates/bundles.gohtml
+++ b/cmd/frontend/templates/bundles.gohtml
@@ -91,7 +91,7 @@
                             <th scope="col">Items</th>
                             <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Giftable"><i class="fas fa-gift"></i></th>
                             <th scope="col" class="thin" data-toggle="tooltip" data-placement="top" title="Complete The Set"><i class="fas fa-tasks"></i></th>
-                            <th scope="col">Updated At</th>
+                            <th scope="col">First Seen</th>
                             <th scope="col" class="thin"><i class="fab fa-steam"></i></th>
                             <th scope="col" class="thin"><i class="fas fa-search"></i></th>
                         </tr>
