--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/v/bs4/dt-1.10.23/fh-3.1.6/rg-1.1.1/b-1.6.5/b-html5-1.6.5/datatables.min.css"/>
     <link rel="stylesheet" href="/assets/dist/main.css?c={{ .AssetTime }}">
 
+    <script data-ad-client="ca-pub-5468884371420326" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/sa-bg-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/sa-bg-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/sa-bg-32x32.png">
