Update home titles

--- a/cmd/frontend/templates/home.gohtml
+++ b/cmd/frontend/templates/home.gohtml
@@ -104,7 +104,7 @@
 
                 <div class="card">
                     <h5 class="card-header">
-                        New Games <small>(Last Two Weeks) - Ordered by peak daily players</small>
+                        New Release <small>- In the last 2 weeks - Ordered by players</small>
                         <small><a href="/games/new-releases" class="float-right">See all New Games</a></small>
                     </h5>
                     <div class="card-body">
@@ -123,7 +123,7 @@
 
                 <div class="card">
                     <h5 class="card-header">
-                        Upcoming Games <small>(Next Two Weeks) - Ordered by followers</small>
+                        Upcoming Releases <small>- In the next 2 weeks - Ordered by followers</small>
                         <small><a href="/games/upcoming" class="float-right">See all Upcoming Games</a></small>
                     </h5>
                     <div class="card-body">
