--- a/cmd/frontend/templates/contact.gohtml
+++ b/cmd/frontend/templates/contact.gohtml
@@ -44,7 +44,11 @@
 
                         </div>
 
-                        {{ template "hcaptcha" . }}
+                        <div class="col-sm-12">
+                            <div class="form-group">
+                                {{ template "hcaptcha" . }}
+                            </div>
+                        </div>
 
                         <div class="col-sm-12 mt-4">
 
