--- a/cmd/frontend/templates/price_changes.gohtml
+++ b/cmd/frontend/templates/price_changes.gohtml
@@ -17,7 +17,7 @@
 
                 <form class="mb-4">
                     <div class="row">
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-12 col-md-6 col-xl-4">
                             <div class="form-group">
                                 <label for="type">Product Type</label>
                                 <select data-placeholder="Choose Product Type" class="form-control form-control-chosen" id="type" name="type">
@@ -27,13 +27,13 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-12 col-md-6 col-xl-4">
                             <div class="form-group slider">
                                 <label id="change-label">Price Change Percent</label>
                                 <div id="change-slider" data-name="change"></div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4">
+                        <div class="col-sm-12 col-md-6 col-xl-4">
                             <div class="form-group slider">
                                 <label id="price-label">Final Price</label>
                                 <div id="price-slider" data-name="price"></div>
