--- a/cmd/frontend/templates/includes/header.gohtml
+++ b/cmd/frontend/templates/includes/header.gohtml
@@ -319,11 +319,11 @@
         </nav>
     </div>
 
-    {{ if and .ShowPatreonMessage (not (.GetCookieFlag "patreon-message")) }}
-        <a id="patreon-message" href="/donate">
-            Subscribe to our Patreon to support new features and hosting costs! <i class="fas fa-times"></i>
-        </a>
-    {{ end }}
+    {{/*    {{ if and .ShowPatreonMessage (not (.GetCookieFlag "patreon-message")) }}*/}}
+    {{/*        <a id="patreon-message" href="/donate">*/}}
+    {{/*            Subscribe to our Patreon to support new features and hosting costs! <i class="fas fa-times"></i>*/}}
+    {{/*        </a>*/}}
+    {{/*    {{ end }}*/}}
 
 </header>
 
