Show package price changes by default

--- a/cmd/frontend/templates/price_changes.gohtml
+++ b/cmd/frontend/templates/price_changes.gohtml
@@ -21,9 +21,10 @@
                             <div class="form-group">
                                 <label for="type">Product Type</label>
                                 <select data-placeholder="Choose Product Type" class="form-control form-control-chosen" id="type" name="type">
-                                    <option value="all">Apps & Packages</option>
-                                    <option value="apps" selected>Apps Only</option>
+                                    <option value="">Apps & Packages</option>
+                                    <option value="apps">Apps Only</option>
                                     <option value="packages">Packages Only</option>
+                                    {{/*<option value="bundles">Bundles Only</option>*/}}
                                 </select>
                             </div>
                         </div>
