--- a/cmd/frontend/templates/stats_steam.gohtml
+++ b/cmd/frontend/templates/stats_steam.gohtml
@@ -21,7 +21,7 @@
                         <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Packages<br/>{{ comma64 .PackagesCount}}</a>
                     </div>
                     <div class="col mb-4">
-                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Bundles<br/>{{ comma .BundlesCount}}</a>
+                        <a href="/bundles" role="button" class="btn btn-success btn-block mb-0">Bundles<br/>{{ comma64 .BundlesCount}}</a>
                     </div>
                     <div class="col mb-4">
                         <a href="/achievements" role="button" class="btn btn-success btn-block mb-0">Achievements<br/>{{ comma64 .AchievementsCount}}</a>
