--- a/cmd/frontend/assets/sass/_app.scss
+++ b/cmd/frontend/assets/sass/_app.scss
@@ -56,10 +56,10 @@
         #player-countries {
             .card-body {
                 overflow: auto;
-                height: 165px;
+                max-height: 165px;
 
                 @include media-breakpoint-up(lg) {
-                    height: 462px;
+                    max-height: 462px;
                 }
             }
         }
