--- a/cmd/frontend/assets/sass/_chat_bot.scss
+++ b/cmd/frontend/assets/sass/_chat_bot.scss
@@ -24,6 +24,7 @@
         code {
             font-size: 20px;
             text-transform: uppercase;
+            color: white;
         }
     }
 
