--- a/cmd/frontend/templates/chat_bot.gohtml
+++ b/cmd/frontend/templates/chat_bot.gohtml
@@ -28,6 +28,19 @@
                 <div class="tab-content">
                     <div class="tab-pane show active" id="commands" role="tabpanel">
 
+                        <div class="row">
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0">
+                                    <strong>All commands are cached for 10 minutes</strong>
+                                </div>
+                            </div>
+                            <div class="col-6 col-md-4 col-lg-3 mb-3">
+                                <div role="button" class="btn btn-success btn-block mb-0">
+                                    <strong>All commands are rate limited to 1/s</strong>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="table-responsive commands-table mb-4">
                             <table class="table table-hover table-striped" id="commands-docs">
                                 <thead class="thead-light">
@@ -68,12 +81,10 @@
                             </table>
                         </div>
 
+                        <h5>Currency Regions</h5>
                         <div id="regions">
-                            <h5>Currency Regions</h5>
                             {{ range .Regions }}
-
                                 <span class="badge bg-success">{{ .Name }} <code>{{ .ProductCode }}</code></span>
-
                             {{ end }}
                         </div>
 
